[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "topcomment"
version = "0.1.0"
[tool.poetry.dependencies]
colorama = "^0.4.3"
halo = "^0.0.29"
instagramapi = "^1.0"
python = "^3.8"
replit = "^1.0"
[tool.poetry.dev-dependencies]
